# GDS

./: .gitignore  CMakeLists.txt  README.md  aref.cpp  aref.h  boundary.cpp  boundary.h  elements.cpp  elements.h  exceptions.cpp  exceptions.h  gadgets.cpp  gadgets.h  gdsio.cpp  gdsio.h  library.cpp  library.h  log.cpp  log.h  main.cpp  path.cpp  path.h  sref.cpp  sref.h  structures.cpp  structures.h  tags.h  techfile.cpp  techfile.h  text.cpp  text.h
src/: CMakeLists.txt  aref.cpp  aref.h  boundary.cpp  boundary.h  elements.cpp  elements.h  exceptions.cpp  exceptions.h  gdsio.h  library.cpp  library.h  path.cpp  path.h  sref.cpp  sref.h  structures.cpp  structures.h  tags.h  text.cpp  text.h
test/: CMakeLists.txt  CMakeLists.txt.txt  main.cpp
